feat: FIrst schema for Programming models and updated mocks
