# src/routes/api.js
@@ -1258,29 +1258,45 @@ const fake_device_model_function = {
     parameters: [
       {
         id: 1,
-        param_type: 1, // # 1 => parameter, 2 => input, 3 => output, 4 => notification
+        property_type: 1, // # 1 => parameter, 2 => input, 3 => output, 4 => notification
         name: 'mode',
         function_id: 1,
         data_type: 1,
-        // # data_type: 
+        // # data_type:
         // # 1 => i32
         // # 2 => i16
         // # 3 => f32
         // # ...
+        default_value: 1,
+        safe_value: 1,
       },
       {
         id: 2,
-        param_type: 1,
+        property_type: 1,
         function_id: 1,
         name: 'delay',
         data_type: 3,
+        default_value: 1,
+        safe_value: 1,
       }
     ],
-    inputs: [],
+    inputs: [
+      {
+        id: 5,
+        property_type: 2,
+        function_id: 1,
+        name: 'trigger',
+        data_type: 1,
+        default_value: 2,
+        safe_value: 2,
+      },
+    ],
     outputs: [],
     notifications: []
   }
 
+    // tira fuori tutti i parametri associati ad una funzione del device
+    // id_device_function parametro della funzione (quelle associate dall'endpoint )
   const fake_device_function = {
     id: 4,
     device_id: 1,
@@ -1295,19 +1311,53 @@ const fake_device_model_function = {
         value: 2,
         parameter_template: {
           id: 1,
-          param_type: 1,
+          property_type: 1,
           name: 'mode',
           function_id: 1,
           data_type: 1,
+          default_value: 1,
+          safe_value: 1,
         }
       },
+      {
+        id: 155,
+        param_id: 2,
+        device_function_id: 4,
+        value: 1,
+        parameter_template: {
+          id: 2,
+          property_type: 1,
+          function_id: 1,
+          name: 'delay',
+          data_type: 3,
+          default_value: 1,
+          safe_value: 1,
+        }
+      }
     ],
-    inputs: [],
+    inputs: [
+      {
+        id: 198,
+        param_id: 5,
+        device_function_id: 4,
+        value: 2,
+        parameter_template: {
+          id: 5,
+          property_type: 2,
+          function_id: 1,
+          name: 'trigger',
+          data_type: 1,
+          default_value: 2,
+          safe_value: 2,
+        }
+      }
+    ],
     outputs: [],
     notifications: []
   }
 
-router.get('/device_models/:deviceModelId/functions/', async function (req, res) {   
+router.get('/device_models/:deviceModelId/functions/', async function (req, res) {
+    
     res.send([fake_device_model_function]);
 });
 
@@ -1316,6 +1366,7 @@ router.get('/device_models/:deviceModelId/functions/:dmFuntionId', async functio
 });
 
 router.post('/device_models/:deviceModelId/functions/', async function (req, res) {
+    // 
     sendError(res, new Error("Not yet implemented."), 501);
 });
 
@@ -1324,6 +1375,7 @@ router.all('/device_models/:deviceModelId/functions/:dmFuntionId', function (req
 });
 
 router.get('/devices/:deviceId/functions/', async function (req, res) {
+    // 
     res.send([fake_device_function]);
 });
 
@@ -1332,6 +1384,13 @@ router.get('/devices/:deviceId/functions/:dFuntionId', async function (req, res)
 });
 
 router.post('/devices/:deviceId/functions/', async function (req, res) {
+    // select salva l'id della funzione
+
+
+    // creare riga per il device dove salva l'ID della funzione e un campo selected
+    // id_device_function
+
+    
     sendError(res, new Error("Not yet implemented."), 501);
 });
 
